--- a/web/index.html
+++ b/web/index.html
@@ -15,12 +15,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.css">
-  <link rel="stylesheet" href="bootstrap/css/bootstrap-reboot.css">
-  <script src="bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="bootstrap/js/bootstrap.js"></script>
-
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="favicon.png">
 
   <script defer src="main.dart.js"></script>
